--- a/src/custom-styles/logo.scss
+++ b/src/custom-styles/logo.scss
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: baseline;
-    padding: 2rem 0rem;
+    padding-bottom: 4rem;
     width: 100%;
 
 
